--- a/rpa-certificates-of-free-sale/Logic Workflows/ProcessParentCase.xaml
+++ b/rpa-certificates-of-free-sale/Logic Workflows/ProcessParentCase.xaml
@@ -1458,7 +1458,7 @@
                   <av:PointCollection x:Key="ConnectorLocation">300,305.5 300,345.5</av:PointCollection>
                 </scg:Dictionary>
               </sap:WorkflowViewStateService.ViewState>
-              <TryCatch DisplayName="Try Validate Application Form" sap:VirtualizedContainerService.HintSize="443,606" sap2010:WorkflowViewState.IdRef="TryCatch_10">
+              <TryCatch DisplayName="Try Validate Application Form" sap:VirtualizedContainerService.HintSize="200,51" sap2010:WorkflowViewState.IdRef="TryCatch_10">
                 <TryCatch.Try>
                   <Sequence sap:VirtualizedContainerService.HintSize="405,379" sap2010:WorkflowViewState.IdRef="Sequence_30">
                     <sap:WorkflowViewStateService.ViewState>
@@ -1746,7 +1746,7 @@
               <av:PointCollection x:Key="ConnectorLocation">300,202.58 300,254.5</av:PointCollection>
             </scg:Dictionary>
           </sap:WorkflowViewStateService.ViewState>
-          <Sequence DisplayName="Get First Application Form" sap:VirtualizedContainerService.HintSize="200,66" sap2010:WorkflowViewState.IdRef="Sequence_29">
+          <Sequence DisplayName="Get First Application Form" sap:VirtualizedContainerService.HintSize="604,680" sap2010:WorkflowViewState.IdRef="Sequence_29">
             <sap:WorkflowViewStateService.ViewState>
               <scg:Dictionary x:TypeArguments="x:String, x:Object">
                 <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -1764,7 +1764,7 @@
                         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                       </scg:Dictionary>
                     </sap:WorkflowViewStateService.ViewState>
-                    <If Condition="[file.Contains(&quot;.doc&quot;)]" DisplayName="If word doc" sap:VirtualizedContainerService.HintSize="484,362" sap2010:WorkflowViewState.IdRef="If_2">
+                    <If Condition="[file.ToLower.Contains(&quot;.doc&quot;)]" DisplayName="If word doc" sap:VirtualizedContainerService.HintSize="484,362" sap2010:WorkflowViewState.IdRef="If_2">
                       <If.Then>
                         <Sequence sap:VirtualizedContainerService.HintSize="304,214" sap2010:WorkflowViewState.IdRef="Sequence_27">
                           <sap:WorkflowViewStateService.ViewState>
