--- a/rpa-certificates-of-free-sale/Logic Workflows/UserCheckAddress.xaml
+++ b/rpa-certificates-of-free-sale/Logic Workflows/UserCheckAddress.xaml
@@ -303,7 +303,7 @@
                                       <av:Size x:Key="ShapeSize">200,66</av:Size>
                                     </scg:Dictionary>
                                   </sap:WorkflowViewStateService.ViewState>
-                                  <Sequence DisplayName="Match Address" sap:VirtualizedContainerService.HintSize="200,66" sap2010:WorkflowViewState.IdRef="Sequence_11">
+                                  <Sequence DisplayName="Match Address" sap:VirtualizedContainerService.HintSize="627,687" sap2010:WorkflowViewState.IdRef="Sequence_11">
                                     <Sequence.Variables>
                                       <Variable x:TypeArguments="scg:IEnumerable(str:Match)" Name="matches" />
                                     </Sequence.Variables>
@@ -312,26 +312,25 @@
                                         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                                       </scg:Dictionary>
                                     </sap:WorkflowViewStateService.ViewState>
-                                    <ui:Matches DisplayName="Matches - Address" sap:VirtualizedContainerService.HintSize="657,59" sap2010:WorkflowViewState.IdRef="Matches_4" Input="[strJsonAddressOutput]" IsBuilderTabModified="False" Pattern="[IN_dictConfig(&quot;AddressRegex&quot;)]" RegexOption="IgnoreCase, Compiled" Result="[matches]" />
-                                    <If Condition="[matches.Count = 0]" DisplayName="If no matches" sap:VirtualizedContainerService.HintSize="657,694" sap2010:WorkflowViewState.IdRef="If_4">
+                                    <ui:Matches DisplayName="Matches - Address" sap:VirtualizedContainerService.HintSize="585,59" sap2010:WorkflowViewState.IdRef="Matches_4" Input="[strJsonAddressOutput]" IsBuilderTabModified="False" Pattern="[IN_dictConfig(&quot;AddressRegex&quot;)]" RegexOption="IgnoreCase, Compiled" Result="[matches]" />
+                                    <If Condition="[matches.Count = 0]" DisplayName="If no matches" sap:VirtualizedContainerService.HintSize="585,496" sap2010:WorkflowViewState.IdRef="If_4">
                                       <If.Then>
                                         <Throw Exception="[new BusinessRuleException(&quot;Couldn't match an address from the User Input form&quot;)]" sap:VirtualizedContainerService.HintSize="200,22" sap2010:WorkflowViewState.IdRef="Throw_2" />
                                       </If.Then>
                                       <If.Else>
-                                        <ui:ForEach x:TypeArguments="str:Match" CurrentIndex="{x:Null}" DisplayName="For Each" sap:VirtualizedContainerService.HintSize="412,546" sap2010:WorkflowViewState.IdRef="ForEach`1_2" Values="[matches]">
+                                        <ui:ForEach x:TypeArguments="str:Match" CurrentIndex="{x:Null}" DisplayName="For Each" sap:VirtualizedContainerService.HintSize="340,348" sap2010:WorkflowViewState.IdRef="ForEach`1_2" Values="[matches]">
                                           <ui:ForEach.Body>
                                             <ActivityAction x:TypeArguments="str:Match">
                                               <ActivityAction.Argument>
                                                 <DelegateInArgument x:TypeArguments="str:Match" Name="match" />
                                               </ActivityAction.Argument>
-                                              <Sequence DisplayName="Body" sap:VirtualizedContainerService.HintSize="376,412" sap2010:WorkflowViewState.IdRef="Sequence_10">
+                                              <Sequence DisplayName="Body" sap:VirtualizedContainerService.HintSize="304,214" sap2010:WorkflowViewState.IdRef="Sequence_10">
                                                 <sap:WorkflowViewStateService.ViewState>
                                                   <scg:Dictionary x:TypeArguments="x:String, x:Object">
                                                     <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                                                   </scg:Dictionary>
                                                 </sap:WorkflowViewStateService.ViewState>
-                                                <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" DisplayName="Message Box" sap:VirtualizedContainerService.HintSize="334,59" sap2010:WorkflowViewState.IdRef="MessageBox_2" Text="[match]" />
-                                                <Assign sap:VirtualizedContainerService.HintSize="334,60" sap2010:WorkflowViewState.IdRef="Assign_5">
+                                                <Assign sap:VirtualizedContainerService.HintSize="262,60" sap2010:WorkflowViewState.IdRef="Assign_5">
                                                   <Assign.To>
                                                     <OutArgument x:TypeArguments="x:String">[OUT_strAddressLabel]</OutArgument>
                                                   </Assign.To>
@@ -339,8 +338,7 @@
                                                     <InArgument x:TypeArguments="x:String">[match.Groups(1).ToString.Replace("\r", "\n").Replace("\n\n", "\n").Replace("\n", Environment.NewLine)]</InArgument>
                                                   </Assign.Value>
                                                 </Assign>
-                                                <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" DisplayName="Message Box" sap:VirtualizedContainerService.HintSize="334,59" sap2010:WorkflowViewState.IdRef="MessageBox_1" Text="[OUT_strAddressLabel]" />
-                                                <ui:Break sap:VirtualizedContainerService.HintSize="334,22" sap2010:WorkflowViewState.IdRef="Break_2" />
+                                                <ui:Break sap:VirtualizedContainerService.HintSize="262,22" sap2010:WorkflowViewState.IdRef="Break_2" />
                                               </Sequence>
                                             </ActivityAction>
                                           </ui:ForEach.Body>
@@ -380,7 +378,7 @@
                               </ui:SendHotkey>
                             </TryCatch.Try>
                             <TryCatch.Catches>
-                              <Catch x:TypeArguments="s:Exception" sap:VirtualizedContainerService.HintSize="400,120" sap2010:WorkflowViewState.IdRef="Catch`1_1">
+                              <Catch x:TypeArguments="s:Exception" sap:VirtualizedContainerService.HintSize="490,277" sap2010:WorkflowViewState.IdRef="Catch`1_1">
                                 <sap:WorkflowViewStateService.ViewState>
                                   <scg:Dictionary x:TypeArguments="x:String, x:Object">
                                     <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -391,10 +389,10 @@
                                   <ActivityAction.Argument>
                                     <DelegateInArgument x:TypeArguments="s:Exception" Name="exception" />
                                   </ActivityAction.Argument>
-                                  <If Condition="[exception.Message.ToLower.Contains(&quot;find the ui element&quot;)]" sap:VirtualizedContainerService.HintSize="200,51" sap2010:WorkflowViewState.IdRef="If_5">
+                                  <If Condition="[exception.Message.ToLower.Contains(&quot;find the ui element&quot;)]" sap:VirtualizedContainerService.HintSize="484,208" sap2010:WorkflowViewState.IdRef="If_5">
                                     <sap:WorkflowViewStateService.ViewState>
                                       <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                                        <x:Boolean x:Key="IsExpanded">False</x:Boolean>
+                                        <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                                         <x:Boolean x:Key="IsPinned">False</x:Boolean>
                                       </scg:Dictionary>
                                     </sap:WorkflowViewStateService.ViewState>
