--- a/rpa-certificates-of-free-sale/Logic Workflows/Start Up/OpenCRM.xaml
+++ b/rpa-certificates-of-free-sale/Logic Workflows/Start Up/OpenCRM.xaml
@@ -6,7 +6,7 @@
   <mva:VisualBasic.Settings>
     <x:Null />
   </mva:VisualBasic.Settings>
-  <sap:VirtualizedContainerService.HintSize>1794,830</sap:VirtualizedContainerService.HintSize>
+  <sap:VirtualizedContainerService.HintSize>1494,830</sap:VirtualizedContainerService.HintSize>
   <sap2010:WorkflowViewState.IdRef>OpenBrowsers_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
     <scg:List x:TypeArguments="x:String" Capacity="21">
@@ -142,7 +142,7 @@
                   <av:PointCollection x:Key="ConnectorLocation">300,255.02 300,329.5</av:PointCollection>
                 </scg:Dictionary>
               </sap:WorkflowViewStateService.ViewState>
-              <ui:WindowScope SearchScope="{x:Null}" Window="{x:Null}" ApplicationWindow="[windowCRM]" ContinueOnError="True" DisplayName="Attach Window - Maximise" sap:VirtualizedContainerService.HintSize="434,260" sap2010:WorkflowViewState.IdRef="WindowScope_1" InformativeScreenshot="55a11eb890f18e8b02bdf1def33e3d60" Selector="&lt;wnd app='iexplore.exe' cls='IEFrame' /&gt;" TimeoutMS="[IN_dictConfig(&quot;timeoutMS&quot;)]">
+              <ui:WindowScope SearchScope="{x:Null}" Window="{x:Null}" ApplicationWindow="[windowCRM]" ContinueOnError="True" DisplayName="Attach Window - Maximise" sap:VirtualizedContainerService.HintSize="200,51" sap2010:WorkflowViewState.IdRef="WindowScope_1" InformativeScreenshot="55a11eb890f18e8b02bdf1def33e3d60" Selector="&lt;wnd app='msedge.exe' title='*Edge*' /&gt;" TimeoutMS="[IN_dictConfig(&quot;timeoutMS&quot;)]">
                 <ui:WindowScope.Body>
                   <ActivityAction x:TypeArguments="x:Object">
                     <ActivityAction.Argument>
